js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-do-while-import-source-empty-str-is-valid-assign-expr.js
do
{
import
.
source
(
'
<
module
source
>
'
)
;
}
while
(
false
)
;
reportCompare
(
0
0
)
;
