js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
do
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
while
(
false
)
;
